Windows batch script

--- a/www.filebot.net/script.html
+++ b/www.filebot.net/script.html
@@ -40,7 +40,7 @@
 					<div class="main-section-paragraph">
 						<p>
 							FileBot makes scripting and automation as easy as it gets. Write modern <a href="http://groovy-lang.org/">Groovy</a> code
-							instead of bothering with cumbersome <acronym title="Windows CMD">*.cmd</acronym> or <acronym title="Unix shell script">*.sh</acronym> scripts.
+							instead of bothering with cumbersome <acronym title="Windows batch script">*.cmd</acronym> or <acronym title="Unix shell script">*.sh</acronym> scripts.
 							It's much more powerful and works the same on all operating systems.
 						</p>
 						<p>
