Add missing parameter

--- a/www.filebot.net/script.html
+++ b/www.filebot.net/script.html
@@ -157,7 +157,7 @@
 						<dd><span class="property">file</span> ... check these verification files</dd>
 					</dl>
 					<hr/>
-					<pre><span class="return">File</span> <span class="method">compute</span>(<span class="property">folder</span> | <span class="property">file</span>, <span class="property">output</span>, <span class="property">encoding</span>)</pre>
+					<pre><span class="return">File</span> <span class="method">compute</span>(<span class="property">folder</span> | <span class="property">file</span>, <span class="property">output</span>, <span class="property">format</span>, <span class="property">encoding</span>)</pre>
 					<div class="text">Compute checksums and hashes for the given files and write them to a verification file.</div>
 					<dl>
 						<dt>Parameters:</dt>
