Added {vcf} video compression format binding

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -417,6 +417,12 @@
 							<td>Integer</td>
 						</tr>
 						<tr>
+							<td>vcf</td>
+							<td>video compression format</td>
+							<td>HEVC</td>
+							<td>String</td>
+						</tr>
+						<tr>
 							<td>vc</td>
 							<td>video codec</td>
 							<td>x264</td>
