--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -23,6 +23,8 @@
 		<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
 		<link rel="stylesheet" href="code.css" type="text/css">
 		<link rel="stylesheet" href="code.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
+		<link rel="stylesheet" href="review.css" type="text/css">
+		<link rel="stylesheet" href="purchase.css" type="text/css">
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<script src="https://cdn.paddle.com/paddle/paddle.js"></script>
@@ -91,7 +93,7 @@
 						manually search and download subtitles, preview subtitles and fix encoding problems.
 					</p>
 					<ol>
-						<li>Drag your movie or episode files onto the <img alt="===" src="images/droparea.png" /> drop area</li>
+						<li>Drag your movie or episode files onto the <img alt="===" width="15" height="15" src="images/droparea.png" /> drop area</li>
 						<li>Hit <span class="label">Download</span></li>
 					</ol>
 					<p>
@@ -111,7 +113,7 @@
 					<span class="quote">Automatic for the people</span>
 					<h2>Some Features</h2>
 					<ul class="list">
-						<li>A simple user-interface tuned for drag-n-drop <small class="comment">(no need to bother with file dialogs)</small></li>
+						<li>A simple user-interface tuned for drag-n-drop</li>
 						<li>Platform-independent and straight-forward application deployment</li>
 						<li>Powerful and full-featured <a class="important" href="cli.html">cmdline interface</a> and <a class="important" href="script.html">scripting interface</a> for any kind of <a href="forums/viewtopic.php?t=5">automation</a></li>
 					</ul>
