--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -48,7 +48,10 @@
 						You will find <a href="forums/viewtopic.php?t=2">many examples</a> for all kinds of custom use cases. Ready for you to just copy &amp; paste,<br> and (optionally) customize to your needs.
 						</p>
 					</div>
-					<h2 id="examples">Examples</h2>
+				</div>
+
+				<div class="section examples first" id="examples">
+					<h2>Examples</h2>
 					<p>
 					<code><span class="block start">{</span><span class="variable">n</span><span class="block end">}</span> - <span class="block start">{</span><span class="variable">s00e00</span><span class="block end">}</span> - <span class="block start">{</span><span class="variable">t</span><span class="block end">}</span></code>Dark Angel - S03E01 - Labyrinth
 					</p>
@@ -86,8 +89,10 @@
 					<p>
 					<code><span class="block start">{</span><span class="variable">n</span>.<span class="method">replaceTrailingBrackets</span>()<span class="block end">}</span> - <span class="block start">{</span><span class="variable">s</span>+<span class="string">'x'</span><span class="block end">}</span><span class="block start">{</span><span class="variable">e</span>.<span class="method">pad</span>(<span class="numeral">2</span>)<span class="block end">}</span> - <span class="block start">{</span><span class="variable">t</span>.<span class="method">removeAll</span>(<span class="regex">/[!?.]+$/</span>).<span class="method">replaceAll</span>(<span class="regex">/[`´‘’ʻ]/</span>, <span class="string">"'"</span>)<br/>.<span class="method">lowerTrail</span>().<span class="method">replacePart</span>(<span class="string">', Part $1'</span>)<span class="block end">}</span></code>My personal favorite. Pretty much 1x01, normalizing accents, and lots of other cleanup operations.
 					</p>
+				</div>
 
-					<h2 class="reference" id="bindings">
+				<div class="section reference" id="bindings">
+					<h2>
 						Binding Reference
 						<a href="docs/api/net/filebot/format/MediaBindingBean.html" class="source">source</a>
 					</h2>
