--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -6,8 +6,8 @@
 
 		<title>Thank you for purchasing FileBot! 💯</title>
 		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
-		<link rel="stylesheet" href="base.css" type="text/css" />
-		<link rel="stylesheet" href="thanks.css" type="text/css" />
+		<link rel="stylesheet" href="base.css" type="text/css">
+		<link rel="stylesheet" href="thanks.css" type="text/css">
 	</head>
 	<body>
 		<div class="page">
