--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -24,7 +24,7 @@
 			</div>
 
 			<div class="header">
-				<a href="/"><img class="logo" alt="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
+				<a href="/"><img class="logo light" src="images/filebot.logo.svg" width="64" height="64" /></a>
 				<h1>
 					FileBot CLI
 					<span class="description">Command-line interface usage manual</span>
