--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -22,7 +22,7 @@
 			</div>
 
 			<div class="header">
-				<a href="/"><img class="logo" alt="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
+				<a href="/"><img class="logo light" src="images/filebot.logo.svg" width="64" height="64" /></a>
 				<h1>
 					FileBot Downloads
 					<span class="description">Installer packages for Windows, Mac and Linux</span>
@@ -31,7 +31,7 @@
 
 			<div class="content">
 				<div class="section download">
-					<img class="icon" src="images/microsoft.logo.svg" alt="download" width="42" height="42" />
+					<img class="icon light" src="images/microsoft.logo.svg" alt="download" width="42" height="42" />
 					<h2>FileBot for Windows</h2>
 					<ul class="list">
 						<li>64-bit Windows Installer: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a></li>
@@ -42,7 +42,7 @@
 				</div>
 
 				<div class="section download">
-					<img class="icon" src="images/apple.logo.svg" alt="download" width="42" height="42" />
+					<img class="icon light" src="images/apple.logo.svg" alt="download" width="42" height="42" />
 					<h2>FileBot for macOS</h2>
 					<ul class="list">
 						<li>macOS installer: <a href="@{link.release.prefix}.pkg">@{release}.pkg</a></li>
@@ -52,7 +52,7 @@
 				</div>
 
 				<div class="section download">
-					<img class="icon" src="images/ubuntu.logo.svg" alt="download" width="48" height="48" />
+					<img class="icon light" src="images/ubuntu.logo.svg" alt="download" width="48" height="48" />
 					<h2>FileBot for Ubuntu and Debian Linux</h2>
 					<ul class="list">
 						<li>Ubuntu / Debian package: <a href="@{link.release.prefix}_amd64.deb">@{release}_amd64.deb</a></li>
@@ -61,7 +61,7 @@
 				</div>
 
 				<div class="section download">
-					<img class="icon" src="images/package.png" alt="download" width="48" height="48" />
+					<img class="icon light" src="images/package.png" alt="download" width="48" height="48" />
 					<h2>FileBot for all POSIX platforms</h2>
 					<ul class="list">
 						<li>POSIX portable package: <a href="@{link.release.prefix}-portable.tar.xz">@{release}-portable.tar.xz</a> <small class="comment">(requires OpenJDK 11)</small></li>
@@ -75,7 +75,7 @@
 				</div>
 
 				<div class="section download">
-					<img class="icon" src="images/package.png" alt="download" width="48" height="48" />
+					<img class="icon light" src="images/package.png" alt="download" width="48" height="48" />
 					<h2>FileBot for Synology DSM and QNAP QTS </h2>
 					<ul class="list">
 						<li>Synology NAS package is available <a href="linux/syno.html">via Package Center</a></li>
@@ -84,7 +84,7 @@
 				</div>
 
 				<div class="section download">
-					<img class="icon" src="images/package.png" alt="download" width="48" height="48" />
+					<img class="icon light" src="images/package.png" alt="download" width="48" height="48" />
 					<h2>Release Archives</h2>
 					<ul class="list">
 						<li>All packages are available on our <a href="https://get.filebot.net/filebot/">Release Index</a></li>
