--- a/www.filebot.net/purchase.html
+++ b/www.filebot.net/purchase.html
@@ -27,7 +27,7 @@
 			</div>
 
 			<div class="header">
-				<a href="/"><img class="logo" alt="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
+				<a href="/"><img class="logo light" src="images/filebot.logo.svg" width="64" height="64" /></a>
 				<h1>
 					FileBot
 					<span class="description">Purchase a universal license</span>
