--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -43,7 +43,7 @@
 			</div>
 
 			<div class="header">
-				<a href="/"><img class="logo" alt="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
+				<a href="/"><img class="logo light" src="images/filebot.logo.svg" width="64" height="64" /></a>
 				<h1>
 					FileBot
 					<a href="forums/viewforum.php?f=7" class="source">v@{application.version}</a>
@@ -52,7 +52,7 @@
 			</div>
 
 			<div class="content">
-				<div class="screenshot screencast">
+				<div class="screenshot screencast light">
 					<a href="getting-started/index.html" title="How to use FileBot">
 						<img class="play" alt="play" src="images/play.png" width="8" height="8" />
 						<img alt="screenshot" src="screenshots/rename.png" width="300" height="219" />
@@ -60,23 +60,25 @@
 				</div>
 
 				<div class="section about">
-					<img class="icon" src="images/information.png" alt="about" width="48" height="48" />
+					<img class="icon light" src="images/information.png" alt="about" width="48" height="48" />
 					<h2>About</h2>
 					<p><strong>FileBot</strong> is the ultimate tool for renaming and organizing your movies, TV shows and Anime. Match and rename media files against online databases, download artwork and cover images, fetch subtitles, write metadata, and more, all at once in matter of seconds. It's smart and just works.</p>
 				</div>
 
-				<a id="review" class="review message box" style="display:none" href="reviews.php">
-				<div class="thumbs up">
-					<img src="images/thumbs_up.png" />
+				<div class="review light" id="review" style="display:none">
+					<a class="box" href="reviews.html">
+					<div class="thumbs up">
+						<img src="images/thumbs_up.png" />
+					</div>
+					<div>
+						<p class="head">Posted by <span class="user"></span> on <span class="date"></span></p>
+						<p class="text"></p>
+					</div>
+					</a>
 				</div>
-				<div>
-					<p class="head">Posted by <span class="user"></span> on <span class="date"></span></p>
-					<p class="text quote"></p>
-				</div>
-				</a>
 
 				<div class="section first tutorial">
-					<img class="icon" src="images/starthere.png" alt="start" width="48" height="48" />
+					<img class="icon light" src="images/starthere.png" alt="start" width="48" height="48" />
 					<h2>Getting Started</h2>
 					<p>
 						<strong>FileBot makes renaming and organizing media files a breeze.</strong> FileBot will automatically match your files with information 
@@ -103,14 +105,14 @@
 					<p>
 						Your <strong>fully automated media center</strong> is one <a href="script.html">filebot</a> command away – extract archives, identify and organize media files, fetch additional artwork and metadata, update Plex, and more – the <a href="amc.html">amc script</a> does it all.
 					</p>
-					<div class="video">
+					<div class="video light">
 						<iframe src="getting-started/index.html" frameborder="0" allowfullscreen="true"></iframe>
 					</div>
 				</div>
 
 				<div class="section features" id="features">
-					<img class="icon" src="images/lists.png" alt="features" width="48" height="48" />
-					<span class="quote">Automatic for the people</span>
+					<img class="icon light" src="images/lists.png" alt="features" width="48" height="48" />
+					<span class="quote light">Automatic for the people</span>
 					<h2>Some Features</h2>
 					<ul class="list">
 						<li>A simple user-interface tuned for drag-n-drop</li>
@@ -119,7 +121,7 @@
 					</ul>
 					<ul class="list next" id="rename">
 						<li>
-							<div class="screenshot">
+							<div class="screenshot light">
 								<a href="getting-started/index.html">
 									<img class="screenshot dialog" style="top: 29px; right: 20px" width="75" height="55" src="screenshots/small/dialog.format.png" alt="Episode naming scheme" />
 								</a>
@@ -132,14 +134,14 @@
 						<li>Fetch episode info from <a href="https://thetvdb.com/">TheTVDB</a>, <a href="https://anidb.net/">AniDB</a> or <a href="https://www.tvmaze.com/">TVmaze</a></li>
 						<li>Accurate and robust and simply awesome file / episode matching logic</li>
 						<li>Series / Anime / Movie name auto-detection</li>
-						<li>Powerful and highly customizable <a class="important" href="naming.html">episode naming scheme</a><br/><span class="note mediainfo">MediaInfo optional</span></li>
+						<li>Powerful and highly customizable <a class="important" href="naming.html">episode naming scheme</a><br/><span class="note light mediainfo">MediaInfo optional</span></li>
 						<li>Supports language preferences for series and episode titles</li>
 						<li>Supports movie identification and renaming via <a href="https://www.themoviedb.org/">TheMovieDB</a></li>
 						<li>Reverse rename files using internal history or the original torrent file</li>
 					</ul>
 					<ul class="list next" id="subtitles">
 						<li>
-							<div class="screenshot">
+							<div class="screenshot light">
 								<a href="getting-started/index.html">
 									<img width="150" height="118" src="screenshots/small/panel.subtitle.png" alt="Download subtitles" />
 								</a>
@@ -154,14 +156,14 @@
 					</ul>
 					<ul class="list next" id="sfv">
 						<li>
-							<div class="screenshot">
+							<div class="screenshot light">
 								<a href="getting-started/index.html">
 									<img width="150" height="118" src="screenshots/small/panel.sfv.png" alt="Verify SFV files" />
 								</a>
 							</div>
 							Easily create and verify <acronym title="simple file verification">sfv</acronym>, <acronym title="md5sum">md5</acronym>, <acronym title="sha1sum">sha1</acronym> and <acronym title="sha256sum">sha256</acronym> files
 						</li>
-						<li>Aware of checksums that are embedded in the filename<br/><span class="note anime">common in anime releases</span></li>
+						<li>Aware of checksums that are embedded in the filename<br/><span class="note light anime">common in anime releases</span></li>
 						<li>Directly compare two or more directory trees</li>
 						<li>Auto-lookup of any existing file verification</li>
 					</ul>
@@ -176,7 +178,7 @@
 				</div>
 
 				<div class="section download" id="download">
-					<img class="icon" src="images/package.png" alt="download" width="48" height="48" />
+					<img class="icon light" src="images/package.png" alt="download" width="48" height="48" />
 					<span class="quote">Today is the day</span>
 					<h2>Download</h2>
 					<ul class="list">
@@ -199,15 +201,15 @@
 				</div>
 
 				<div class="section purchase" id="purchase">
-					<img class="icon" src="images/coin.png" alt="download" width="48" height="48" />
+					<img class="icon light" src="images/coin.png" alt="download" width="48" height="48" />
 					<span class="quote">We work to better ourselves</span>
 					<h2>Buy a License</h2>
-					<a id="year" href="#!" class="paddle_button" data-allow-quantity="false" data-referrer="index" data-product="532439">
+					<a id="year" href="#!" class="paddle_button light" data-allow-quantity="false" data-referrer="index" data-product="532439">
 						Purchase <em>1 year</em> universal license
 						<div class="tag"><span class="paddle-gross" data-product="532439">US$6.00</span></div>
 					</a>
 
-					<a id="life" href="#!" class="paddle_button" data-allow-quantity="false" data-referrer="index" data-product="534413">
+					<a id="life" href="#!" class="paddle_button light" data-allow-quantity="false" data-referrer="index" data-product="534413">
 						Purchase <em>life-time</em> universal license
 						<div class="tag"><span class="paddle-gross" data-product="534413">US$60.00</span></div>
 					</a>
@@ -221,7 +223,7 @@
 				</div>
 
 				<div class="section contact">
-					<img class="icon" src="images/contact.png" alt="contact" width="48" height="48" />
+					<img class="icon light" src="images/contact.png" alt="contact" width="48" height="48" />
 					<span class="quote">Will you join us?</span>
 					<h2>Contact</h2>
 					<p>
