--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -22,7 +22,7 @@
 			</div>
 
 			<div class="header">
-				<a href="/"><img class="logo" alt="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
+				<a href="/"><img class="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
 				<h1>
 					FileBot
 					<span class="description">Paddle Checkout Complete</span>
@@ -38,12 +38,10 @@
 					<p>
 						Your license has been issued and will arrive in your inbox shortly. You will receive <a href="activate.html">2 emails</a>. The first email from <a href="mailto:help@paddle.com">help@paddle.com</a> will contain your License Key as plain text. The second email from <a href="mailto:license@filebot.net">license@filebot.net</a> will contain your License File as file attachment. Either one can be used to activate FileBot.
 					</p>
-					<div class="review message box">
+					<a class="box" href="https://drive.google.com/">
 						<img src="images/information.png" width="48" height="48" />
-						<p>
 						Please store your License File carefully and make sure to keep a copy on Google Drive. If you lose both your License Key and your License File, then you may <u>not</u> be able to recover your license in case of data loss, and you may need to purchase a new one.
-						</p>
-					</div>
+					</a>
 				</div>
 
 				<div class="section tutorial">
