--- a/www.filebot.net/reviews.html
+++ b/www.filebot.net/reviews.html
@@ -8,32 +8,21 @@
 		<link rel="stylesheet" href="base.css" type="text/css">
 		<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
 		<link rel="stylesheet" href="review.css" type="text/css">
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<script src="reviews.js"></script>
 	</head>
 	<body>
-		<?
-		// read file
-		$filename = "reviews.json";
-		$handle = fopen($filename, "r");
-		$contents = fread($handle, filesize($filename));
-		fclose($handle);
-
-		// parse Json
-		$reviews = json_decode($contents);
-		shuffle($reviews);
-
-		foreach ($reviews as $review) {
-			?>
-			<div class="review message box" style="float:left">
+		<div class="review light" style="float: left">
+			<a class="box" href="{link}" id="{id}">
 				<div class="thumbs up">
 					<img src="images/thumbs_up.png" />
 				</div>
 				<div>
-					<p class="head">Posted by <span class="user"><? echo $review->user ?></span> on <span class="date"><? echo $review->date ?></span></p>
-					<p class="text quote"><? echo $review->text ?></p>
+					<p class="head">Posted by <span class="user">{user}</span> on <span class="date">{date}</span></p>
+					<p class="text">{text}</p>
 				</div>
-			</div>
-			<?
-		}
-		?>
+			</a>
+		</div>
 	</body>
 </html>
