--- a/www.filebot.net/reviews.html
+++ b/www.filebot.net/reviews.html
@@ -11,9 +11,15 @@
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<script src="reviews.js"></script>
+
+		<style type="text/css">
+			div.review {
+				float: left;
+			}
+		</style>
 	</head>
 	<body>
-		<div class="review light" style="float: left">
+		<div class="review light">
 			<a class="box" href="{link}" id="{id}">
 				<div class="thumbs up">
 					<img src="images/thumbs_up.png" />
