--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -32,23 +32,21 @@
 			</div>
 
 			<div class="content">
-				<div class="main-section-screenshot">
+				<div class="screenshot column">
 					<a href="screenshots/cli.png"><img alt="FileBot command-line tools" width="330" src="screenshots/cli.png" /></a>
 				</div>
-				<div class="section about">
+				<div class="section about column">
 					<h2>About</h2>
-					<div class="main-section-paragraph">
-						<p>
+					<p>
 						FileBot can be called with a set of command-line arguments directly from the console 
 						or in scripts for automation, running tasks like renaming TV shows and movies, fetching subtitles or checking SFV files.
-						</p>
-						<p>
+					</p>
+					<p>
 						The CLI is designed for <a href="forums/viewtopic.php?t=4788">simple commands</a> that do one thing and do it well.
-						</p>
-						<p>
+					</p>
+					<p>
 						Please read <a href="script.html">Scripts and Automation</a> if you need more advanced behaviours. Find shared scripts for many common tasks in the <a href="forums/viewtopic.php?t=5">Script Repository</a>.
-						</p>
-					</div>
+					</p>
 				</div>
 
 				<div class="section examples first" id="examples">
