--- a/www.filebot.net/purchase.html
+++ b/www.filebot.net/purchase.html
@@ -35,8 +35,8 @@
 			</div>
 
 			<div class="content">
-				<div class="screenshot" style="background-color: white; padding: 0px 0px 0px 0px">
-					<img alt="screenshot" src="screenshots/license.png" width="152" height="169">
+				<div class="screenshot light">
+					<img alt="Paste License Key" src="screenshots/license.png" width="152" height="169">
 				</div>
 				<div class="section about">
 					<h2>Buy a License</h2>
@@ -46,12 +46,12 @@
 				</div>
 
 				<div id="purchase" class="section purchase">
-					<a id="year" href="#!" class="paddle_button" data-allow-quantity="false" data-referrer="purchase" data-product="532439">
+					<a id="year" href="#!" class="paddle_button light" data-allow-quantity="false" data-referrer="purchase" data-product="532439">
 						Purchase <em>1 year</em> universal license
 						<div class="tag"><span class="paddle-gross" data-product="532439">US$6.00</span></div>
 					</a>
 
-					<a id="life" href="#!" class="paddle_button" data-allow-quantity="false" data-referrer="purchase" data-product="534413">
+					<a id="life" href="#!" class="paddle_button light" data-allow-quantity="false" data-referrer="purchase" data-product="534413">
 						Purchase <em>life-time</em> universal license
 						<div class="tag"><span class="paddle-gross" data-product="534413">US$60.00</span></div>
 					</a>
@@ -64,7 +64,9 @@
 					</ul>
 				</div>
 
-				<p class="suggestion" style="margin-top: 120px; margin-bottom: 20px">
+				<div class="metrics"></div>
+
+				<p class="suggestion">
 				Please read to <a href="activate.html">How do I activate my license?</a> for details on license activation.
 				</p>
 
