--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -32,22 +32,20 @@
 			</div>
 
 			<div class="content">
-				<div class="main-section-screenshot">
-					<a title="Format Dialog" href="screenshots/format.png"><img alt="Edit Format Dialog" width="330" src="screenshots/format.png" /></a>
+				<div class="screenshot column">
+					<a title="Edit Format Dialog" href="screenshots/format.png"><img alt="Edit Format Dialog" width="330" src="screenshots/format.png" /></a>
 				</div>
-				<div class="section about">
+				<div class="section about column">
 					<h2>About</h2>
-					<div class="main-section-paragraph">
-						<p>
+					<p>
 						You can define your own episode and movie naming schemes. Built-in bindings such as <a href="forums/viewtopic.php?t=4116">{plex}</a> can be used unmodified, or as a starting point for your own custom format.
-						</p>
-						<p>
+					</p>
+					<p>
 						Simple things are easy. Complex things are just as easy, if you're familiar with <a href="http://groovy-lang.org/">Groovy</a> scripting. There are <a href="#bindings">many bindings</a> that can serve as building blocks for you to write your own custom format tailored to your liking with ease.
-						</p>
-						<p>
+					</p>
+					<p>
 						You will find <a href="forums/viewtopic.php?t=2">many examples</a> for all kinds of custom use cases. Ready for you to just copy &amp; paste,<br> and (optionally) customize to your needs.
-						</p>
-					</div>
+					</p>
 				</div>
 
 				<div class="section examples first" id="examples">
