--- a/www.filebot.net/script.html
+++ b/www.filebot.net/script.html
@@ -32,22 +32,20 @@
 			</div>
 
 			<div class="content">
-				<div class="main-section-screenshot">
+				<div class="screenshot column">
 					<a href="https://github.com/filebot/scripts"><img alt="See Examples" width="330" src="screenshots/script.png" /></a>
 				</div>
-				<div class="section about">
+				<div class="section about column">
 					<h2>About</h2>
-					<div class="main-section-paragraph">
-						<p>
-							FileBot makes scripting and automation as easy as it gets. Write modern <a href="http://groovy-lang.org/">Groovy</a> code
-							instead of bothering with cumbersome <acronym title="Windows batch script">*.cmd</acronym> or <acronym title="Unix shell script">*.sh</acronym> scripts.
-							It's much more powerful and works the same on all operating systems.
-						</p>
-						<p>
-							The built-in <a href="#functions">functions</a> are the same as in the <a href="cli.html">CLI</a> and <a href="manpage.html">parameter usage</a> 
-							is also exactly the same.
-						</p>
-					</div>
+					<p>
+						FileBot makes scripting and automation as easy as it gets. Write modern <a href="http://groovy-lang.org/">Groovy</a> code
+						instead of bothering with cumbersome <acronym title="Windows batch script">*.cmd</acronym> or <acronym title="Unix shell script">*.sh</acronym> scripts.
+						It's much more powerful and works the same on all operating systems.
+					</p>
+					<p>
+						The built-in <a href="#functions">functions</a> are the same as in the <a href="cli.html">CLI</a> and <a href="manpage.html">parameter usage</a> 
+						is also exactly the same.
+					</p>
 				</div>
 
 				<div class="section examples first" id="examples">
